--- a/assets/highlight.css
+++ b/assets/highlight.css
@@ -1,14 +1,22 @@
 :root {
-    --light-hl-0: #0000FF;
+    --light-hl-0: #000000;
     --dark-hl-0: #569CD6;
     --light-hl-1: #000000;
     --dark-hl-1: #D4D4D4;
-    --light-hl-2: #001080;
+    --light-hl-2: #000000;
     --dark-hl-2: #9CDCFE;
-    --light-hl-3: #795E26;
+    --light-hl-3: #000000;
     --dark-hl-3: #DCDCAA;
-    --light-hl-4: #A31515;
+    --light-hl-4: #000000;
     --dark-hl-4: #CE9178;
+    --light-hl-5: #0000FF;
+    --dark-hl-5: #569CD6;
+    --light-hl-6: #001080;
+    --dark-hl-6: #9CDCFE;
+    --light-hl-7: #795E26;
+    --dark-hl-7: #DCDCAA;
+    --light-hl-8: #A31515;
+    --dark-hl-8: #CE9178;
     --light-code-background: #FFFFFF;
     --dark-code-background: #1E1E1E;
 }
@@ -19,6 +27,10 @@
     --hl-2: var(--light-hl-2);
     --hl-3: var(--light-hl-3);
     --hl-4: var(--light-hl-4);
+    --hl-5: var(--light-hl-5);
+    --hl-6: var(--light-hl-6);
+    --hl-7: var(--light-hl-7);
+    --hl-8: var(--light-hl-8);
     --code-background: var(--light-code-background);
 } }
 
@@ -28,6 +40,10 @@
     --hl-2: var(--dark-hl-2);
     --hl-3: var(--dark-hl-3);
     --hl-4: var(--dark-hl-4);
+    --hl-5: var(--dark-hl-5);
+    --hl-6: var(--dark-hl-6);
+    --hl-7: var(--dark-hl-7);
+    --hl-8: var(--dark-hl-8);
     --code-background: var(--dark-code-background);
 } }
 
@@ -37,6 +53,10 @@
     --hl-2: var(--light-hl-2);
     --hl-3: var(--light-hl-3);
     --hl-4: var(--light-hl-4);
+    --hl-5: var(--light-hl-5);
+    --hl-6: var(--light-hl-6);
+    --hl-7: var(--light-hl-7);
+    --hl-8: var(--light-hl-8);
     --code-background: var(--light-code-background);
 }
 
@@ -46,6 +66,10 @@
     --hl-2: var(--dark-hl-2);
     --hl-3: var(--dark-hl-3);
     --hl-4: var(--dark-hl-4);
+    --hl-5: var(--dark-hl-5);
+    --hl-6: var(--dark-hl-6);
+    --hl-7: var(--dark-hl-7);
+    --hl-8: var(--dark-hl-8);
     --code-background: var(--dark-code-background);
 }
 
@@ -54,4 +78,8 @@
 .hl-2 { color: var(--hl-2); }
 .hl-3 { color: var(--hl-3); }
 .hl-4 { color: var(--hl-4); }
+.hl-5 { color: var(--hl-5); }
+.hl-6 { color: var(--hl-6); }
+.hl-7 { color: var(--hl-7); }
+.hl-8 { color: var(--hl-8); }
 pre, code { background: var(--code-background); }
